--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -38,6 +38,6 @@
     <h2 style="float:right; margin-right: 16px; margin-top: 0px;padding-top:0px;">Total amound: €2323,66</h2>
   </div>
 
-  
+  <app-transfer></app-transfer>
 </main>
 
